--- a/.jx/updatebot.yaml
+++ b/.jx/updatebot.yaml
@@ -6,6 +6,6 @@ spec:
         - https://github.com/jenkins-x/jx3-pipeline-catalog
       changes:
         - regex:
-            pattern: "jenkinsxio/jx-registry:(.*)"
+            pattern: "jenkins-x/jx-registry:(.*)"
             files:
               - "**/*.yaml"
